--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -29,8 +29,7 @@
             <span>Hello there!</span>
         </div>
     </section>
-    <section class="me-card-wrapper center-stage" appJsOnscroll [activateScroll]="activateScroll"
-        (onStateChange)="headerStateChange($event)" [scrollLimit]=60>
+    <section class="me-card-wrapper center-stage">
         <div class="me-card" [style.width]="carouselLoadProgress + '%'">
             <div class="dp my-dp">
                 <js-ng-carousel [slideItems]=slideList [play]=play [config]="carouselConfig" [style.width.%]="100" [style.height.%]="100" (carouselReady)="onCarouselReady($event)"
