--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,7 +1,7 @@
 <div class="content blog-content center-stage">
   <h1>Blog</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper view-check below-view" appJsOnscroll [viewportCheck]=true>
+    <div class="content-wrapper" viewportCheck >
       <div class="main">
         <h2>My blogs posts</h2>
         <i class="icon-ios-chatboxes"></i>
