--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="content contact-content center-stage">
   <h1>Contact</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true>
+    <div class="content-wrapper clearfix" viewportCheck >
       <div class="main">
         <h2>Send me an email here</h2>
         <i class="icon-paper-airplane"></i>
@@ -47,10 +47,10 @@
       </div>
     </div>
   </div>
-  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100 (enteredViewport)="animateTiles()">
+  <section class="my-tiles">
     <div class="tiles-wrapper">
       <h2>Follow me on</h2>
-      <div class="tiles-container">
+      <div class="tiles-container" viewportCheck [padding]=100 (enteredViewport)="animateTiles()">
         <ul class="clearfix skill-list">
           <li class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
             <div #tileItem class="tile-wrapper facebook hide">
