--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="content projects-content center-stage">
   <h1>Projects</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper clearfix view-check below-view" appJsOnscroll [viewportCheck]=true >
+    <div class="content-wrapper clearfix view-check below-view" viewportCheck  >
       <div class="main">
         <h2>My hobby projects</h2>
         <i class="icon-social-github"></i>
@@ -38,7 +38,7 @@
   <section class="all-projects-container">
     <h2>All projects</h2>
     <ul class="project-list">
-      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true>
+      <li class="project project-card view-check below-view" viewportCheck >
         <div class="title">
           <h3>MEAN Mess Manager</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-demo-app">
@@ -73,7 +73,7 @@
           </a>
         </div>
       </li>
-      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true>
+      <li class="project project-card view-check below-view" viewportCheck checkDelay=500 >
         <div class="title">
           <h3>Material Demo App</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-mat-demo">
@@ -102,7 +102,7 @@
           </a>
         </div>
       </li>
-      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true>
+      <li class="project project-card view-check below-view" viewportCheck >
         <div class="title">
           <h3>Angular Carousel</h3>
           <a class="github-link" href="https://github.com/Jayabratha/js-angular-carousel">
