--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -440,6 +440,20 @@ button {
         padding-left: 0;
         padding-top: 1em;
     }
+    .overview.below-view {
+        -webkit-transform: translateY(50px);
+        -moz-transform: translateY(50px);
+        -ms-transform: translateY(50px);
+       transform: translateY(50px);
+       opacity: 0;
+    }
+    .overview.above-view {
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+       transform: translateY(0);
+       opacity: 1;
+    }
 }
 
 /* Tab Styles - End */
@@ -447,10 +461,6 @@ button {
 /* Mobile Styles - Start */
 
 @media (max-width: 500px) {
-    header.main-header {
-        background: transparent;
-        z-index: 5;
-    }
     .js-logo {
         background: #FFFFFF;
         margin-left: 0.5em;
