--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -109,7 +109,6 @@
 
 .me-card {
     position: relative;
-    height: 100%;
     margin: 0 auto 0;
     transform: translate3d(0, 0, 0);
     left: 0;
@@ -126,10 +125,9 @@
 }
 
 .info-wrapper {
-    height: 19.3em;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 19.3em;
     padding: 2em;
     padding-left: 40%;
     color: #FFFFFF;
@@ -646,7 +644,6 @@ h1.name {
     .logo-menu {
         padding: 3px;
     }
-
     .menu-icon,
     .menu-icon-top,
     .menu-icon-bottom {
@@ -707,11 +704,8 @@ h1.name {
         height: 157vw;
     }
     .info-wrapper {
-        position: absolute;
-        bottom: 0;
-        padding: 20px;
-        height: 60vw;
         font-size: 3vw;
+        padding: 2em;
     }
     .my-card {
         position: relative;
@@ -760,6 +754,7 @@ h1.name {
     .fix-header .me-card-wrapper,
     .search-header .me-card-wrapper {
         padding-top: 4.1em;
+        padding-bottom: 0;
         height: 0.125em;
     }
     .fix-header.show-menu .my-card,
@@ -797,6 +792,7 @@ h1.name {
     /* Show Menu Styles - End */
     .dp.my-dp {
         height: 94vw;
+        float: none;
     }
     .logo-section i {
         color: #212121;
