Fixes and Style updates

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper view-check clearfix below-view" viewportCheck >
+    <div class="content-wrapper clearfix below-view" viewportCheck >
       <div class="main">
         <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
         <i class="icon-android-compass"></i>
