--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,7 +1,7 @@
 <div class="content art-content center-stage">
   <h1>Art</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper view-check clearfix below-view" viewportCheck >
+    <div class="content-wrapper clearfix below-view" viewportCheck >
       <div class="main">
         <h2>A collection of my sketches and paintings</h2>
         <i class="icon-android-color-palette"></i>
