--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="content contact-content center-stage">
   <h1>Contact</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper clearfix" viewportCheck >
+    <div class="content-wrapper clearfix below-view" viewportCheck >
       <div class="main">
         <h2>Send me an email here</h2>
         <i class="icon-paper-airplane"></i>
