--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="content projects-content center-stage">
   <h1>Projects</h1>
   <div class="feature-wrapper">
-    <div class="content-wrapper clearfix view-check below-view" viewportCheck  >
+    <div class="content-wrapper clearfix below-view" viewportCheck >
       <div class="main">
         <h2>My hobby projects</h2>
         <i class="icon-social-github"></i>
