--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,13 @@
 /* Overview Styles - Start */
 .home-content {
+    opacity: 1;
+    transition: opacity 0.3s ease-out;
     margin-top: 15em;
 }
-
+.home-content.hide {
+    opacity: 0.2;
+    margin-top: 100vh;
+}
 .scroll-indicator {
     position: fixed;
     right: 2em;
@@ -209,9 +214,8 @@
 }
 
 @media (max-width: 650px) {
-    .home-content {
-        margin-top: 25em;
-        overflow: hidden;
+    .home-content {       
+        margin-top: 100vw;
     }
     .overview-wrapper {
         min-height: 550px;
