--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -1,14 +1,21 @@
 .image-item {
     overflow: hidden;
+    float: left;
+}
+
+.image-placeholder {
+    background: #dadada;;
+    margin: 2px;
+    width: 100%;
+    height: 100%;
 }
 
 .image-wrapper {
     position: relative;
-    height: 60vw;
-    max-height: 20em;
+    height: 100%;
+    width: 100%;
     cursor: pointer;
     opacity: 1;
-    margin: 1px;
     overflow: hidden;
     transform: translate3d(0, 0, 0);
     -webkit-transition: all 0.5s linear;
