--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -22,7 +22,7 @@
           (leftViewport)="hideRowItems(row, i)">
         <div class="image-item" *ngFor="let image of row" [style.width.px]="image.thumbWidth" [style.height.px]="image.thumbHeight">
           <div class="image-placeholder">
-            <div class="image-wrapper" #elem (click)="showInGallery(image, elem)" *ngIf="rowLoadMap[i].loaded" [class.hide]="!image.visible">
+            <div class="image-wrapper" #elem (click)="showInGallery(image, elem)" *ngIf="rowLoadMap[i].loaded" [class.active]="currentImage && currentImage.title === image.title" [class.hide]="!image.visible">
               <img class="art-images" [title]="image.title" [src]="image.thumbUrl" (load)="updateProgress(image, row, i)" />
               <div class="image-title">{{image.title}}</div>
               <div class="shadow"></div>
