--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -407,7 +407,6 @@ h1.name {
 /* Show Menu Styles - End */
 
 /* Nav Highlighter - Start */
-
 .nav-highlighter-wrapper {
     position: absolute;
     bottom: 0;
@@ -417,7 +416,7 @@ h1.name {
 
 .nav-highlighter {
     position: relative;
-    height: 0.125em;
+    height: 0.15rem;
     left: 0;
     width: 0;
     background: #FFFFFF;
@@ -463,7 +462,6 @@ h1.name {
 /* Nav Highlighter - End */
 
 /* Logo Style - Start */
-
 .logo-section i {
     color: #FFFFFF;
 }
@@ -474,11 +472,9 @@ h1.name {
     display: block;
     font-size: 3em;
 }
-
 /* Logo Style - Start */
 
 /* Search Style - Start */
-
 .search-wrapper {
     position: absolute;
     display: inline-block;
