--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -396,6 +396,27 @@ button {
 /* Scroll Directive Styles - End */
 
 
+@keyframes placeHolderShimmer{
+    0%{
+        background-position: -468px 0
+    }
+    100%{
+        background-position: 468px 0
+    }
+}
+
+.animated-background {
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+    position: relative;
+}
+
+
 /* Tab Styles - Start */
 @media (max-width: 950px) {
     .center-stage {
