--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -1,11 +1,14 @@
+.image-row {
+    background: #eeeeee;
+}
+
 .image-item {
     overflow: hidden;
     float: left;
 }
 
 .image-placeholder {
-    background: #dadada;;
-    margin: 2px;
+    border: 1px solid #fafafa;
     width: 100%;
     height: 100%;
 }
@@ -65,6 +68,7 @@
 }
 
 .image-wrapper.hide {
+    opacity: 0;
     transform: translate3d(0, 200px, 0);
 }
 
