--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -37,7 +37,7 @@
         <div class="me-card" [style.width]="carouselLoadProgress + '%'">
             <div class="dp my-dp">
                 <js-ng-carousel [slideItems]=slideList [play]=play [config]="carouselConfig" [style.width.%]="100"
-                    [style.height.%]="100" (carouselReady)="onCarouselReady($event)" (carouselLoading)="onCarouselLoadProgress($event)"></js-ng-carousel>
+                    [style.height.%]="100" (carouselLoading)="onCarouselLoadProgress($event)"></js-ng-carousel>
             </div>
             <div class="info-wrapper">
                 <h1 class="name">Jayabratha Saha</h1>
