Making Art lazy loaded

--- a/src/app/art/art-list/art-list.component.css
+++ b/src/app/art/art-list/art-list.component.css
@@ -77,7 +77,7 @@
 }
 
 .feature-content {
-    background-image: url(../../assets/images/sketch.jpg);
+    background-image: url(../../../assets/images/sketch.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
 }
