--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <div class="main-loader loading-icon animate" [hidden]="!loading"></div>
-    <section class="hello-card">
+    <section class="hello-card" [hidden]="headerState.state != HEADER_STATE.Initial">
         <div class="overlay"></div>
         <div class="initial-loader loading-icon animate"></div>
         <div class="hello">
